# libthinkpad

./: .gitignore  CMakeLists.txt  TODO
doc/: README.md  config.doxy  header.html
examples/: ACPIListener.cpp  a.out  listener
exe/: CMakeLists.txt  NOTICE  main.cpp
lib/: CMakeLists.txt  config.h.in  libthinkdock.cpp  libthinkdock.h  libthinkpad.cpp  libthinkpad.h
src/: CMakeLists.txt  config.h.in  libthinkpad.cpp  libthinkpad.h
